# senac_sig_wrapper

./: .gitignore  README.md  pyproject.toml
senac_sig_wrapper/: __init__.py  client.py  enum.py  exceptions.py  helper.py  hooks.py  request.py  settings.py  validators.py
senac_sig_wrapper/resources/: __init__.py  administration.py  base_resource.py  classes.py  course.py  finance.py  registration.py
tests/: conftest.py  test_base_resource.py  test_client.py  test_config.py  test_enum.py  test_error_enum.py  test_exceptions.py  test_helper.py  test_hooks.py  test_request.py  test_resources_administration.py  test_resources_classes.py  test_resources_course.py  test_resources_finance.py  test_resources_registration.py  test_validator.py
